# SupFileManager

./: .clang-format  CMakeLists.txt  TODO.md
cmake/: utils.cmake  warnings.cmake
lib/console-gui-elements-lib/: CMakeLists.txt
lib/console-gui-elements-lib/cmake/: console-gui-lib.cmake.in
lib/console-gui-elements-lib/include/console-gui-elements-lib/: horizontal_canvas.hpp  i_rendered_element.hpp  menu_list.hpp  vertical_list.hpp  window.hpp
lib/console-gui-elements-lib/src/: horizontal_canvas.cpp  menu_list.cpp  vertical_list.cpp  window.cpp
lib/console-gui-elements-lib/tests/: CMakeLists.txt  console_gui_elements_lib_test.cpp
lib/event-system/: CMakeLists.txt  TODO.md
lib/event-system/include/event-system/: event_system.hpp
lib/event-system/include/event-system/event-subscription/: event_subscription.hpp  i_event_subscription.hpp
lib/event-system/src/implementation/: event_subscription_list.hpp
lib/event-system/src/implementation/event-subscription/: event_subscription_fabric.hpp  event_subscription_simple_impl.hpp  i_event_subscription_impl.hpp
lib/event-system/tests/: CMakeLists.txt  eventsystem_test.cpp
lib/filesystem/: CMakeLists.txt
lib/filesystem/cmake/: filesystem-lib.cmake.in
lib/filesystem/include/filesystem/: filesystem.h  filesystem.hpp
lib/filesystem/src/: filesystem.cpp
lib/filesystem/tests/: CMakeLists.txt  filesystem_lib_test.cpp
lib/generic-core/: CMakeLists.txt  TODO.md
lib/generic-core/include/generic-core/: logger.hpp  logger_init.hpp
lib/generic-core/src/: logger.cpp
lib/generic-core/tests/: CMakeLists.txt  generic_core_test.cpp
lib/generic-types/: CMakeLists.txt
lib/generic-types/include/generic-types/: i_controller.hpp  thread_safe_queue.hpp
lib/generic-types/tests/: CMakeLists.txt  generic_types_test.cpp
lib/platform/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/controller/: filespace_controller.cpp  filespace_controller.hpp  main_workspace_controller.cpp  main_workspace_controller.hpp  workspace_controller.cpp  workspace_controller.hpp
src/include/: i_controller.hpp  i_view.hpp
src/model/: filespace_model.hpp  mainspace_model.hpp  workspace_model.hpp
src/render/: render_processor.cpp  render_processor.hpp
src/view/: filespace_view.hpp  mainspace_view.hpp
